--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "eslint": "^8.20.0",
+    "lite-server": "^2.6.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/node": "*",
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
   }
