--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,18 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "eslint": "^8.20.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
     "lite-server": "^2.6.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/node": "*",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
   }
