--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,12 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "lite-server": "^2.6.1",
+    "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
