--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "script": {
+    "dev": "ts-node-dev --transpiler-only --ignore-watch node_modules --respawn src/server.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "eslint": "^8.20.0",
